--- a/plano-de-saude/style.css
+++ b/plano-de-saude/style.css
@@ -12,6 +12,16 @@ header{
     margin-top: 20px;   
 
 }
+button{
+    padding: 20px;
+    text-transform: uppercase;
+    border-radius: 30px;
+    border: none;
+    background-image: linear-gradient(rgb(98, 192, 98), green);
+    color: white;
+    font-weight: 800;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.253);
+}
 header ul{
     display: flex;
     list-style: none;
@@ -37,6 +47,36 @@ h1 > span{
     color: red;
 }
 
-main{
+main > h2{
+    text-align: center;
+    font-size: 60px;
+    margin-top: 100px;
     
+}
+h2 > span{
+    color: red;
+}
+.dados{
+    display: inline-block;
+    width: 100px;
+    margin: 150px 0px 0px 40%;
+    
+    
+    align-items: center;
+
+}
+.dados > input{
+    width: 300px;
+    height: 80px;
+    margin-top: 20px;
+}
+.botao-calcular{
+    text-transform: uppercase;
+    font-size: 20px;
+    border-radius: 30px;
+    border: none;
+    background-image: linear-gradient(rgb(98, 192, 98), green);
+    font-weight: 900;
+    color: white;
+    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.253);
 }
