--- a/plano-de-saude/style.css
+++ b/plano-de-saude/style.css
@@ -69,6 +69,10 @@ h2 > span{
     width: 300px;
     height: 80px;
     margin-top: 20px;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+    border-radius: 20px;
 }
 .botao-calcular{
     text-transform: uppercase;
@@ -79,4 +83,13 @@ h2 > span{
     font-weight: 900;
     color: white;
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.253);
+}
+.botao-calcular:hover{
+    cursor: pointer;
+}
+#resposta{
+    text-align: center;
+    margin-top: 30px;
+    font-size: 30px;
+    font-weight: 600;
 }
