--- a/plano-de-saude/style.css
+++ b/plano-de-saude/style.css
@@ -93,3 +93,11 @@ h2 > span{
     font-size: 30px;
     font-weight: 600;
 }
+
+@media (max-width: 990px) {
+    .navegacao{
+        display: none;
+    }
+    
+}
+
