--- a/plano-de-saude/style.css
+++ b/plano-de-saude/style.css
@@ -28,6 +28,10 @@ header ul{
     gap: 50px;
     
 }
+span#menu{
+    background-color: rgba(0, 0, 0, 0.062);
+    display: none;
+}
 a{
     text-decoration: none;
     color: black;
@@ -96,7 +100,10 @@ h2 > span{
 
 @media screen and (max-width: 990px) {
     .navegacao{
-        display: none;
+        display: block;
+        flex-direction: column;
+        width: 30px;
+        
     }
     button{
         display: none;
@@ -108,6 +115,11 @@ h2 > span{
         
         
     }
+    span#menu{
+        display: block;
+        cursor: pointer;
+    }
+   
     
     
     
