--- a/plano-de-saude/style.css
+++ b/plano-de-saude/style.css
@@ -6,6 +6,8 @@
 
 }
 header{
+    
+    
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -25,13 +27,13 @@ button{
 header ul{
     display: flex;
     list-style: none;
+
+    font-weight: 600;
     gap: 50px;
     
 }
-span#menu{
-    background-color: rgba(0, 0, 0, 0.062);
-    display: none;
-}
+
+
 a{
     text-decoration: none;
     color: black;
@@ -40,10 +42,7 @@ a{
     border-radius: 30px;
     text-transform: uppercase;
 }
-a:hover{
-    background-color: rgba(0, 0, 0, 0.096);
 
-}
 h1{
     font-size: 50px;
 }
@@ -78,6 +77,9 @@ h2 > span{
     text-align: center;
     border-radius: 20px;
 }
+#menu{
+    display: none;
+}
 .botao-calcular{
     text-transform: uppercase;
     font-size: 20px;
@@ -98,30 +100,39 @@ h2 > span{
     font-weight: 600;
 }
 
-@media screen and (max-width: 990px) {
-    .navegacao{
+
+
+    
+@media screen and (max-width: 600px){
+    #menu{
         display: block;
-        flex-direction: column;
-        width: 30px;
-        
     }
+    .navegacao{
+        display: none;
+    }
+    header ul{
+        display: block;
+        
+        background-color: rgba(0, 0, 0, 0.089);
+        padding: 10px;   
+    }
+   
+    
     button{
         display: none;
+    }
+    main > h2{
+        text-align: center;
+        font-size: 60px;
+        margin-top: 40px;
+        font-size: 50px;
     }
     .dados{
         display: inline-block;
         width: 100px;
-        margin: 20px 0px 0px 20%;
-        
-        
-    }
-    span#menu{
-        display: block;
-        cursor: pointer;
-    }
-   
+        margin: 50px 0px 0px 20%;              
+        align-items: center;
     
-    
+    }
     
 }
-
